# random-memorization

./: .gitignore  pyproject.toml
experiments/: 01_initial_exploration.md  02_mlp_100k.md  03_transformer_debug.md  04_mlp_3x3x3_sweep.md  05_scaling_laws.md  train_random.py
experiments/configs/: debug_transformer_len100.yaml  debug_transformer_len50.yaml  mlp_N50k_L128_D1024_b0.5.yaml  mlp_N50k_L128_D1024_b1.0.yaml  mlp_N50k_L128_D1024_b1.5.yaml  mlp_N50k_L128_D256_b0.5.yaml  mlp_N50k_L128_D256_b1.0.yaml  mlp_N50k_L128_D256_b1.5.yaml  mlp_N50k_L128_D512_b0.5.yaml  mlp_N50k_L128_D512_b1.0.yaml  mlp_N50k_L128_D512_b1.5.yaml  mlp_N50k_L256_D1024_b0.5.yaml  mlp_N50k_L256_D1024_b1.0.yaml  mlp_N50k_L256_D1024_b1.5.yaml  mlp_N50k_L256_D256_b0.5.yaml  mlp_N50k_L256_D256_b1.0.yaml  mlp_N50k_L256_D256_b1.5.yaml  mlp_N50k_L256_D512_b0.5.yaml  mlp_N50k_L256_D512_b1.0.yaml  mlp_N50k_L256_D512_b1.5.yaml  mlp_N50k_L512_D1024_b0.5.yaml  mlp_N50k_L512_D1024_b1.0.yaml  mlp_N50k_L512_D1024_b1.5.yaml  mlp_N50k_L512_D256_b0.5.yaml  mlp_N50k_L512_D256_b1.0.yaml  mlp_N50k_L512_D256_b1.5.yaml  mlp_N50k_L512_D512_b0.5.yaml  mlp_N50k_L512_D512_b1.0.yaml  mlp_N50k_L512_D512_b1.5.yaml  powerlaw_N100k_mlp_b0.5.yaml  powerlaw_N100k_mlp_b1.5.yaml  powerlaw_N1k_mlp_b0.5.yaml  powerlaw_N1k_mlp_b1.5.yaml  powerlaw_N1k_transformer_b0.5.yaml  powerlaw_N1k_transformer_b1.5.yaml  scaling_N10k_D512.yaml  scaling_N200k_D512.yaml  scaling_N2k_D512.yaml  (+6 more)
scripts/: plot_loss_curves.py  plot_scaling_laws.py  plot_sweep_grids.py  run_sweep.sh
src/: config.py  data.py  model.py  train.py  utils.py
(+39 files in other folders)
